--- a/src/main/webapp/assets/layui/css/admin.css
+++ b/src/main/webapp/assets/layui/css/admin.css
@@ -2,7 +2,7 @@
 html #layuicss-layuiAdmin {
     display: none;
     position: absolute;
-    width: 1989px
+    width: 1989px;
 }
 
 ::-webkit-input-placeholder {
@@ -410,7 +410,7 @@ html {
     height: 40px;
     line-height: 40px;
     padding: 0 80px 0 40px;
-    background-color: #fff;
+    background-color: rgba(0,0,0,0.1);
     box-sizing: border-box;
     box-shadow: 0 1px 2px 0 rgba(0,0,0,.1)
 }
@@ -425,17 +425,18 @@ html {
     transition: all .3s;
     -webkit-transition: all .3s;
     box-sizing: border-box;
-    border-left: 1px solid #f6f6f6
+    border-left: 1px solid rgba(255,255,255,0.3);
+    color: #fff;
 }
 
 .layadmin-pagetabs .layadmin-tabs-control:hover {
-    background-color: #f6f6f6
+    background-color: rgba(0,0,0,0.18)
 }
 
 .layadmin-pagetabs .layui-icon-prev {
     left: 0;
     border-left: none;
-    border-right: 1px solid #f6f6f6
+    border-right: 1px solid rgba(255,255,255,0.3);
 }
 
 .layadmin-pagetabs .layui-icon-next {
@@ -486,7 +487,8 @@ html {
 
 .layadmin-pagetabs .layui-tab-title {
     height: 40px;
-    border: none
+    border: none;
+    color: rgba(255,255,255,0.7);
 }
 
 .layadmin-pagetabs .layui-tab-title li {
@@ -496,7 +498,7 @@ html {
     text-overflow: ellipsis;
     padding-right: 40px;
     overflow: hidden;
-    border-right: 1px solid #f6f6f6;
+    border-right: 1px solid rgba(255,255,255,0.3);
     vertical-align: top
 }
 
@@ -534,14 +536,14 @@ html {
 }
 
 .layadmin-pagetabs .layui-tab-title li.layui-this,.layadmin-pagetabs .layui-tab-title li:hover {
-    background-color: #f6f6f6
+    background-color:rgba(0,0,0,0.18)
 }
 
 .layadmin-pagetabs .layui-tab-title li.layui-this:after {
     width: 100%;
     border: none;
     height: 2px;
-    background-color: #292B34
+    background-color:rgba(255,255,255,.05)
 }
 
 .layadmin-tabspage-none .layui-layout-admin .layui-header {
@@ -562,9 +564,9 @@ html {
 }
 
 .layui-layout-admin .layui-header {
-    border-bottom: 1px solid #f6f6f6;
     box-sizing: border-box;
-    background-color: rgb(10, 102, 196);
+    transition: background-color 1s,box-shadow 1s;
+    background-color: rgba(0,0,0,.3);
 }
 
 .layui-layout-admin .layui-header a,.layui-layout-admin .layui-header a cite {
@@ -572,7 +574,7 @@ html {
 }
 
 .layui-layout-admin .layui-header a:hover {
-    color: #000
+    color: #fff
 }
 
 .layui-layout-admin .layui-header .layui-nav .layui-nav-more {
@@ -589,13 +591,11 @@ html {
 }
 
 .layui-layout-admin .layui-logo {
-    background-color: #20222A;
     box-shadow: 0 1px 2px 0 rgba(0,0,0,.15)
 }
 
 .layui-layout-admin .layui-logo,.layui-layout-admin .layui-logo a {
     color: #fff;
-    color: rgba(255,255,255,.8)
 }
 
 .layui-side-menu {
@@ -609,7 +609,7 @@ html {
 }
 
 .layadmin-setTheme-side,.layui-side-menu {
-    background-color: #20222A;
+    background-color: rgba(0,0,0,.125);
     color: #fff
 }
 
